# fink

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  DATA_LICENSE.md  LICENSE  LOOP.md  NOTICE.md  README.md  pyproject.toml  wrangler.jsonc
archive/: README.md
archive/docs/: README_CONTENT_GUIDE.md
archive/loop/: ACCEPTANCE.md  HUMAN_GATES.yaml  MODEL_RESEARCH_HUMAN_GATES.yaml
archive/paper/: fink_paper.blg
archive/prompts/: 00_claude_build_master_spec.md  02_claude_complete_master_spec.md  10d_hf_auth_license_policy.md
archive/tests/: test_local_runtime_scripts.py
config/: financial_features.yaml  risk_taxonomy.yaml  scoring_config.yaml  signal_rules.yaml
configs/models/: candidates.yaml  download_size_dry_runs.yaml  local_inventory.yaml  open_license_shortlist.yaml  runtime_profiles.yaml  selected_profiles.yaml
data/eval/: frozen_eval_manifest.json
data/knowledge/: creator_contract_checkpoints.yaml
docs/: FINK_MASTER_SPEC.md  FINK_SINGLE_MAIN_PUBLIC_MANUAL.md  README_CONTENT_GUIDE.md  ai-use-log.md  data-card.md  knowledge-base.md  limitations.md  model-card.md  privacy.md
docs/paper/: 00_abstract.md  01_problem_and_motivation.md  02_related_work.md  03_method.md  04_data_and_implementation.md  05_experiments.md  06_results.md  07_discussion_and_limitations.md  08_responsible_ai.md  09_conclusion.md  CITATION_NOTES.md  CLAIM_LEDGER.csv  FIGURE_REGISTRY.csv  RESULT_LEDGER.csv
docs/specs/: 03_SCORING_AND_FINANCIAL_IMPACT.md  04_LOCAL_RUNTIME_AND_PRIVACY.md  05_EVALUATION_AND_DECISION_FOCUSED_METRICS.md  06_UI_UX_RESPONSIVE_WEB.md  07_PAPER_PROJECT_PAGE_AND_DELIVERABLE_SYNC.md  09_ACCEPTANCE_CHECKLIST.md  10_TRACEABILITY_MATRIX.csv  HUMAN_DECISION_RESOLUTIONS.md  SPEC_COMPLETION_REPORT.md
loop/: BACKLOG.yaml  CHARTER.md  HUMAN_GATES.yaml  RUBRIC.md  STATE.json  STOP.example
loop/reviews/: BOOTSTRAP_AUDIT.md  BOOTSTRAP_REPAIR_SUMMARY.md  BOOTSTRAP_REQUIRED_ACTIONS.yaml
paper/: fink.bib  fink_paper.tex
prompts/: 01_claude_audit_master_spec.md  03_claude_reaudit_master_spec.md  10_codex_bootstrap_agent_loop.md  11_claude_audit_agent_loop.md  11d_hf_auth_license_audit.md
scripts/: __init__.py  check_paper_sync  check_paper_sync.py  copyright_audit.py  create_public_repo.sh  download_models.sh  import_stage_corpus.py  install_local.sh  invariant_suite.py  model_doctor.sh  public_repo_preflight.sh  run_demo.sh  run_web.sh  verify_spec_inputs.sh  web_a11y_contrast_check.py
scripts/agent_loop/: README.md  __init__.py  _common.py  apply_verdict.py  build_task_context.py  git_checkpoint.sh  loop_once.sh  queue.s0.txt  queue.s3.txt  rollback_failed_task.py  run_backlog.sh  run_claude.py  run_codex.py  select_next.py  update_loop_docs.py  validate_repo.py
scripts/eval/: __init__.py  cost_sensitive_verification_results.json  cost_sensitive_verification_suite.py  decision_utility_suite.py  decision_utility_suite_results.json  fink_exp_01_factorial.py  fink_exp_01_factorial_results.json  formula_unit_suite.py  formula_unit_suite_results.json  ocr_extract_metric_suite.py  ocr_extract_metric_suite_results.json  retrieval_metric_suite.py  retrieval_metric_suite_results.json  risk_metric_suite.py  risk_metric_suite_results.json  runtime_gate_suite.py  runtime_gate_suite_results.json  synthetic_dataset_suite.py  synthetic_dataset_suite_results.json
scripts/model_research/: create_private_model_env.sh  model_offline_load_smoke.py  model_research_metadata_parse.py  model_size_dry_run_records.py  run_with_hf_auth.sh
scripts/smoke/: clean_clone_web.sh
site/: app.js  index.html  styles.css  test_public_page.py
tests/: test_agent_loop.py  test_gate_safety.py  test_knowledge_base.py
tests/eval/: __init__.py  test_cost_sensitive_verification_suite.py  test_decision_utility_suite.py  test_fink_exp_01_factorial.py  test_ocr_extract_metric_suite.py  test_retrieval_metric_suite.py  test_risk_metric_suite.py  test_synthetic_dataset_suite.py
tests/extract/: test_financial_term_extraction.py
tests/finance/: __init__.py  test_formula_unit_suite.py  test_impact.py
tests/grounding/: __init__.py  test_authority_grounding.py
tests/ingest/: __init__.py  test_correction_flow.py  (+2 more)
(+144 files in other folders)
