[project]
name = "fink-contracts"
version = "0.0.0"
description = "FInk local-first financial contract review scaffold and agent-loop infrastructure."
requires-python = ">=3.11"
# PyYAML is a hard runtime dependency: the loop cannot parse loop/BACKLOG.yaml or
# loop/HUMAN_GATES.yaml without it (_common.load_yaml raises LoopError otherwise).
dependencies = ["pyyaml>=6"]

# Developer/validation tooling. The loop itself degrades gracefully without
# these: run_gates.sh falls back to `python3 -m unittest` / AST parsing when
# ruff/mypy/pytest are absent, and schema validation no-ops when jsonschema is
# absent. This group makes the documented `uv run pytest` command exercise the
# full suite (including real jsonschema validation) in a networked dev env.
[dependency-groups]
dev = ["pytest>=8", "jsonschema>=4"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".fink", "paper/template/icml2026"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^paper/template/icml2026/", "^.fink/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Put the repo root on sys.path so `from scripts.agent_loop import ...` resolves
# under pytest the same way it does under `python3 -m unittest discover`.
pythonpath = ["."]
addopts = "-q"
