[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fink-contracts"
version = "0.0.0"
description = "FInk local-first financial contract review scaffold and agent-loop infrastructure."
requires-python = ">=3.11"
# PyYAML is a hard runtime dependency: the loop cannot parse loop/BACKLOG.yaml or
# loop/HUMAN_GATES.yaml without it (_common.load_yaml raises LoopError otherwise).
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
web = ["fastapi>=0.115", "uvicorn>=0.30", "python-multipart>=0.0.9"]
chat = ["huggingface_hub>=0.23", "llama-cpp-python>=0.2.79"]
# Optional local OCR runtime for image / scanned-PDF uploads. PaddleOCR-VL runs
# fully offline at analyze time once the model files are cached; the deterministic
# Tesseract path keeps working without this extra installed.
ocr = ["paddleocr[doc-parser]>=3.4.0", "paddlepaddle>=3.0"]

[project.scripts]
fink-web = "fink.web.app:run"
fink-models = "fink.models.download:main"

# Developer/validation tooling. The loop itself degrades gracefully without
# these: run_gates.sh falls back to `python3 -m unittest` / AST parsing when
# ruff/mypy/pytest are absent, and schema validation no-ops when jsonschema is
# absent. This group makes the documented `uv run pytest` command exercise the
# full suite (including real jsonschema validation) in a networked dev env.
[dependency-groups]
dev = ["pytest>=8", "jsonschema>=4"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fink*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".fink", "paper/template/icml2026"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^paper/template/icml2026/", "^.fink/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Put the repo root on sys.path so `from scripts.agent_loop import ...` resolves
# under pytest the same way it does under `python3 -m unittest discover`.
pythonpath = ["."]
addopts = "-q"
